add: Whoami endpoint
Fetch authenticated profile information
