# docs/fireWatch/swagger.json
@@ -202,10 +202,32 @@
                     }
                 ],
                 "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/contracts.AuthResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/whoami": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profile"
+                ],
+                "summary": "Fetch Profile Information",
+                "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/contracts.AuthResponse"
+                            "$ref": "#/definitions/contracts.ProfileResponse"
                         }
                     }
                 }
@@ -213,6 +235,23 @@
         }
     },
     "definitions": {
+        "contracts.AddressResponse": {
+            "type": "object",
+            "properties": {
+                "city": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "integer"
+                },
+                "street": {
+                    "type": "string"
+                },
+                "zipCode": {
+                    "$ref": "#/definitions/contracts.ZipCodeResponse"
+                }
+            }
+        },
         "contracts.AuthResponse": {
             "type": "object",
             "properties": {
@@ -235,6 +274,40 @@
                 }
             }
         },
+        "contracts.PhoneResponse": {
+            "type": "object",
+            "properties": {
+                "countryCode": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "string"
+                }
+            }
+        },
+        "contracts.ProfileResponse": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "$ref": "#/definitions/contracts.AddressResponse"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "phone": {
+                    "$ref": "#/definitions/contracts.PhoneResponse"
+                },
+                "userType": {
+                    "type": "string"
+                }
+            }
+        },
         "contracts.ResetPasswordRequest": {
             "type": "object",
             "required": [
@@ -246,6 +319,14 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "contracts.ZipCodeResponse": {
+            "type": "object",
+            "properties": {
+                "value": {
                     "type": "string"
                 }
             }
